# CPP20-Cross-Platform-Template

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_index  index.html
.github/workflows/: build-release.yml  continuous-integration.yml
cmake/Modules/: CPM.cmake
my-hovercraft-is-full-of-eels/: CMakeLists.txt  Config.cmake.in
my-hovercraft-is-full-of-eels/include/my-hovercraft-is-full-of-eels/: Public.hpp
my-hovercraft-is-full-of-eels/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
myhovercraftisfullofeels/: CMakeLists.txt
myhovercraftisfullofeels/include/myhovercraftisfullofeels/: Public.hpp
myhovercraftisfullofeels/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
project/: CMakeLists.txt  Config.cmake.in
project/include/project/: Public.hpp
project/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
tests/: CMakeLists.txt  example.cpp  main.cpp
v0.4/: Private_8hpp_source.html  Public_8hpp.html  Public_8hpp__dep__incl.map  Public_8hpp__dep__incl.md5  Public_8hpp_af2d211c1b02697806a9bbf35fda82054_cgraph.map  Public_8hpp_af2d211c1b02697806a9bbf35fda82054_cgraph.md5  Public_8hpp_af2d211c1b02697806a9bbf35fda82054_icgraph.md5  Public_8hpp_source.html  dir_000003_000001.html  dir_17c8666a547dd20a52e8be1a1326d436.html  dir_67d7853523c41844f8fe4df781d82289.html  dir_67d7853523c41844f8fe4df781d82289_dep.map  dir_67d7853523c41844f8fe4df781d82289_dep.md5  dir_9600a03d3932d94661d70d72b7a94483.html  dir_e5a20ca93a50d5806e0c2d2464da1da0.html  dir_e5a20ca93a50d5806e0c2d2464da1da0_dep.map  dir_e5a20ca93a50d5806e0c2d2464da1da0_dep.md5  files.html  graph_legend.html  index.html
v0.4/search/: all_0.js  all_1.js  files_0.js  functions_0.js  searchdata.js
